fix image overflow for inline image-C52

--- a/source/css/scss/custom/_global.scss
+++ b/source/css/scss/custom/_global.scss
@@ -18,11 +18,6 @@ body {
 	font-family: $font-family-sans-serif;
 }
 
-@media (min-width: 1200px){
-	.row {
-	    overflow: auto !important;
-	}
-}
 
 
 // Links
